// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load core configuration 1`] = `
{
  "env": {},
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaVersion": 2018,
    "sourceType": "module",
  },
  "plugins": [
    "import",
    "eslint-comments",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "constructor-super": [
      "error",
    ],
    "eslint-comments/disable-enable-pair": [
      "error",
    ],
    "eslint-comments/no-aggregating-enable": [
      "error",
    ],
    "eslint-comments/no-duplicate-disable": [
      "error",
    ],
    "eslint-comments/no-unlimited-disable": [
      "error",
    ],
    "eslint-comments/no-unused-enable": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/namespace": [
      "error",
    ],
    "import/no-duplicates": [
      "warn",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "alphabetize": {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": [
          "builtin",
          "external",
          "internal",
          [
            "parent",
            "index",
            "sibling",
          ],
          "object",
          "type",
          "unknown",
        ],
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "internal",
            "pattern": "@/**",
          },
          {
            "group": "internal",
            "pattern": "~/**",
          },
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "error",
      {
        "ignoreRestSiblings": true,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`should load es5 configuration 1`] = `
{
  "env": {},
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaVersion": 2018,
    "sourceType": "module",
  },
  "plugins": [
    "import",
    "eslint-comments",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "constructor-super": [
      "error",
    ],
    "eslint-comments/disable-enable-pair": [
      "error",
    ],
    "eslint-comments/no-aggregating-enable": [
      "error",
    ],
    "eslint-comments/no-duplicate-disable": [
      "error",
    ],
    "eslint-comments/no-unlimited-disable": [
      "error",
    ],
    "eslint-comments/no-unused-enable": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/namespace": [
      "error",
    ],
    "import/no-duplicates": [
      "warn",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "alphabetize": {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": [
          "builtin",
          "external",
          "internal",
          [
            "parent",
            "index",
            "sibling",
          ],
          "object",
          "type",
          "unknown",
        ],
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "internal",
            "pattern": "@/**",
          },
          {
            "group": "internal",
            "pattern": "~/**",
          },
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "error",
      {
        "ignoreRestSiblings": true,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`should load esnext configuration 1`] = `
{
  "env": {
    "es2022": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaVersion": 2022,
    "sourceType": "module",
  },
  "plugins": [
    "import",
    "eslint-comments",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "constructor-super": [
      "error",
    ],
    "eslint-comments/disable-enable-pair": [
      "error",
    ],
    "eslint-comments/no-aggregating-enable": [
      "error",
    ],
    "eslint-comments/no-duplicate-disable": [
      "error",
    ],
    "eslint-comments/no-unlimited-disable": [
      "error",
    ],
    "eslint-comments/no-unused-enable": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/namespace": [
      "error",
    ],
    "import/no-duplicates": [
      "warn",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "alphabetize": {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": [
          "builtin",
          "external",
          "internal",
          [
            "parent",
            "index",
            "sibling",
          ],
          "object",
          "type",
          "unknown",
        ],
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "internal",
            "pattern": "@/**",
          },
          {
            "group": "internal",
            "pattern": "~/**",
          },
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "error",
      {
        "ignoreRestSiblings": true,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`should load jest configuration 1`] = `
{
  "env": {
    "jest/globals": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {},
  "plugins": [
    "jest",
    "jest-formatting",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "jest/consistent-test-it": [
      "error",
      {
        "fn": "it",
      },
    ],
    "jest/expect-expect": [
      "warn",
    ],
    "jest/no-alias-methods": [
      "warn",
    ],
    "jest/no-commented-out-tests": [
      "warn",
    ],
    "jest/no-conditional-expect": [
      "error",
    ],
    "jest/no-deprecated-functions": [
      "error",
    ],
    "jest/no-disabled-tests": [
      "warn",
    ],
    "jest/no-done-callback": [
      "error",
    ],
    "jest/no-export": [
      "error",
    ],
    "jest/no-focused-tests": [
      "error",
    ],
    "jest/no-identical-title": [
      "error",
    ],
    "jest/no-interpolation-in-snapshots": [
      "error",
    ],
    "jest/no-jasmine-globals": [
      "error",
    ],
    "jest/no-mocks-import": [
      "error",
    ],
    "jest/no-standalone-expect": [
      "error",
    ],
    "jest/no-test-prefixes": [
      "error",
    ],
    "jest/prefer-to-be": [
      "error",
    ],
    "jest/prefer-to-contain": [
      "error",
    ],
    "jest/prefer-to-have-length": [
      "error",
    ],
    "jest/valid-describe-callback": [
      "error",
    ],
    "jest/valid-expect": [
      "error",
    ],
    "jest/valid-expect-in-promise": [
      "error",
    ],
    "jest/valid-title": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`should load node configuration 1`] = `
{
  "env": {
    "node": true,
  },
  "globals": {
    "ArrayBuffer": "readonly",
    "Atomics": "readonly",
    "BigInt": "readonly",
    "BigInt64Array": "readonly",
    "BigUint64Array": "readonly",
    "Buffer": "readonly",
    "DataView": "readonly",
    "Float32Array": "readonly",
    "Float64Array": "readonly",
    "GLOBAL": "readonly",
    "Int16Array": "readonly",
    "Int32Array": "readonly",
    "Int8Array": "readonly",
    "Intl": "readonly",
    "Map": "readonly",
    "Promise": "readonly",
    "Proxy": "readonly",
    "Reflect": "readonly",
    "Set": "readonly",
    "SharedArrayBuffer": "readonly",
    "Symbol": "readonly",
    "TextDecoder": "readonly",
    "TextEncoder": "readonly",
    "URL": "readonly",
    "URLSearchParams": "readonly",
    "Uint16Array": "readonly",
    "Uint32Array": "readonly",
    "Uint8Array": "readonly",
    "Uint8ClampedArray": "readonly",
    "WeakMap": "readonly",
    "WeakSet": "readonly",
    "WebAssembly": "readonly",
    "__dirname": "readonly",
    "__filename": "readonly",
    "clearImmediate": "readonly",
    "clearInterval": "readonly",
    "clearTimeout": "readonly",
    "console": "readonly",
    "exports": "writable",
    "global": "readonly",
    "globalThis": "readonly",
    "module": "readonly",
    "process": "readonly",
    "queueMicrotask": "readonly",
    "require": "readonly",
    "root": "readonly",
    "setImmediate": "readonly",
    "setInterval": "readonly",
    "setTimeout": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaFeatures": {
      "globalReturn": true,
    },
    "ecmaVersion": 2019,
    "sourceType": "script",
  },
  "plugins": [
    "node",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "no-process-exit": [
      "error",
    ],
    "node/no-deprecated-api": [
      "error",
    ],
    "node/no-exports-assign": [
      "error",
    ],
    "node/no-extraneous-import": [
      "error",
    ],
    "node/no-extraneous-require": [
      "error",
    ],
    "node/no-missing-import": [
      "error",
    ],
    "node/no-missing-require": [
      "error",
    ],
    "node/no-unpublished-bin": [
      "error",
    ],
    "node/no-unpublished-import": [
      "error",
    ],
    "node/no-unpublished-require": [
      "error",
    ],
    "node/no-unsupported-features/es-builtins": [
      "error",
    ],
    "node/no-unsupported-features/es-syntax": [
      "error",
      {
        "ignores": [],
      },
    ],
    "node/no-unsupported-features/node-builtins": [
      "error",
    ],
    "node/process-exit-as-throw": [
      "error",
    ],
    "node/shebang": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`should load prettier configuration 1`] = `
{
  "env": {},
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {},
  "plugins": [
    "prettier",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      "off",
    ],
    "@babel/semi": [
      "off",
    ],
    "@typescript-eslint/brace-style": [
      "off",
    ],
    "@typescript-eslint/comma-dangle": [
      "off",
    ],
    "@typescript-eslint/comma-spacing": [
      "off",
    ],
    "@typescript-eslint/func-call-spacing": [
      "off",
    ],
    "@typescript-eslint/indent": [
      "off",
    ],
    "@typescript-eslint/keyword-spacing": [
      "off",
    ],
    "@typescript-eslint/member-delimiter-style": [
      "off",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "off",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "off",
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/semi": [
      "off",
    ],
    "@typescript-eslint/space-before-blocks": [
      "off",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "off",
    ],
    "@typescript-eslint/space-infix-ops": [
      "off",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "off",
    ],
    "array-bracket-newline": [
      "off",
    ],
    "array-bracket-spacing": [
      "off",
    ],
    "array-element-newline": [
      "off",
    ],
    "arrow-body-style": [
      "off",
    ],
    "arrow-parens": [
      "off",
    ],
    "arrow-spacing": [
      "off",
    ],
    "babel/object-curly-spacing": [
      "off",
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      "off",
    ],
    "block-spacing": [
      "off",
    ],
    "brace-style": [
      "off",
    ],
    "comma-dangle": [
      "off",
    ],
    "comma-spacing": [
      "off",
    ],
    "comma-style": [
      "off",
    ],
    "computed-property-spacing": [
      "off",
    ],
    "curly": [
      0,
    ],
    "dot-location": [
      "off",
    ],
    "eol-last": [
      "off",
    ],
    "flowtype/boolean-style": [
      "off",
    ],
    "flowtype/delimiter-dangle": [
      "off",
    ],
    "flowtype/generic-spacing": [
      "off",
    ],
    "flowtype/object-type-curly-spacing": [
      "off",
    ],
    "flowtype/object-type-delimiter": [
      "off",
    ],
    "flowtype/quotes": [
      "off",
    ],
    "flowtype/semi": [
      "off",
    ],
    "flowtype/space-after-type-colon": [
      "off",
    ],
    "flowtype/space-before-generic-bracket": [
      "off",
    ],
    "flowtype/space-before-type-colon": [
      "off",
    ],
    "flowtype/union-intersection-spacing": [
      "off",
    ],
    "func-call-spacing": [
      "off",
    ],
    "function-call-argument-newline": [
      "off",
    ],
    "function-paren-newline": [
      "off",
    ],
    "generator-star": [
      "off",
    ],
    "generator-star-spacing": [
      "off",
    ],
    "implicit-arrow-linebreak": [
      "off",
    ],
    "indent": [
      "off",
    ],
    "indent-legacy": [
      "off",
    ],
    "jsx-quotes": [
      "off",
    ],
    "key-spacing": [
      "off",
    ],
    "keyword-spacing": [
      "off",
    ],
    "linebreak-style": [
      "off",
    ],
    "lines-around-comment": [
      0,
    ],
    "max-len": [
      0,
    ],
    "multiline-ternary": [
      "off",
    ],
    "new-parens": [
      "off",
    ],
    "newline-per-chained-call": [
      "off",
    ],
    "no-arrow-condition": [
      "off",
    ],
    "no-comma-dangle": [
      "off",
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-extra-parens": [
      "off",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-floating-decimal": [
      "off",
    ],
    "no-mixed-operators": [
      0,
    ],
    "no-mixed-spaces-and-tabs": [
      "off",
    ],
    "no-multi-spaces": [
      "off",
    ],
    "no-multiple-empty-lines": [
      "off",
    ],
    "no-reserved-keys": [
      "off",
    ],
    "no-space-before-semi": [
      "off",
    ],
    "no-spaced-func": [
      "off",
    ],
    "no-tabs": [
      0,
    ],
    "no-trailing-spaces": [
      "off",
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-whitespace-before-property": [
      "off",
    ],
    "no-wrap-func": [
      "off",
    ],
    "nonblock-statement-body-position": [
      "off",
    ],
    "object-curly-newline": [
      "off",
    ],
    "object-curly-spacing": [
      "off",
    ],
    "object-property-newline": [
      "off",
    ],
    "one-var-declaration-per-line": [
      "off",
    ],
    "operator-linebreak": [
      "off",
    ],
    "padded-blocks": [
      "off",
    ],
    "prefer-arrow-callback": [
      "off",
    ],
    "prettier/prettier": [
      "error",
    ],
    "quote-props": [
      "off",
    ],
    "quotes": [
      0,
    ],
    "react/jsx-child-element-spacing": [
      "off",
    ],
    "react/jsx-closing-bracket-location": [
      "off",
    ],
    "react/jsx-closing-tag-location": [
      "off",
    ],
    "react/jsx-curly-newline": [
      "off",
    ],
    "react/jsx-curly-spacing": [
      "off",
    ],
    "react/jsx-equals-spacing": [
      "off",
    ],
    "react/jsx-first-prop-new-line": [
      "off",
    ],
    "react/jsx-indent": [
      "off",
    ],
    "react/jsx-indent-props": [
      "off",
    ],
    "react/jsx-max-props-per-line": [
      "off",
    ],
    "react/jsx-newline": [
      "off",
    ],
    "react/jsx-one-expression-per-line": [
      "off",
    ],
    "react/jsx-props-no-multi-spaces": [
      "off",
    ],
    "react/jsx-space-before-closing": [
      "off",
    ],
    "react/jsx-tag-spacing": [
      "off",
    ],
    "react/jsx-wrap-multilines": [
      "off",
    ],
    "rest-spread-spacing": [
      "off",
    ],
    "semi": [
      "off",
    ],
    "semi-spacing": [
      "off",
    ],
    "semi-style": [
      "off",
    ],
    "space-after-function-name": [
      "off",
    ],
    "space-after-keywords": [
      "off",
    ],
    "space-before-blocks": [
      "off",
    ],
    "space-before-function-paren": [
      "off",
    ],
    "space-before-function-parentheses": [
      "off",
    ],
    "space-before-keywords": [
      "off",
    ],
    "space-in-brackets": [
      "off",
    ],
    "space-in-parens": [
      "off",
    ],
    "space-infix-ops": [
      "off",
    ],
    "space-return-throw-case": [
      "off",
    ],
    "space-unary-ops": [
      "off",
    ],
    "space-unary-word-ops": [
      "off",
    ],
    "standard/array-bracket-even-spacing": [
      "off",
    ],
    "standard/computed-property-even-spacing": [
      "off",
    ],
    "standard/object-curly-even-spacing": [
      "off",
    ],
    "switch-colon-spacing": [
      "off",
    ],
    "template-curly-spacing": [
      "off",
    ],
    "template-tag-spacing": [
      "off",
    ],
    "unicode-bom": [
      "off",
    ],
    "unicorn/empty-brace-spaces": [
      "off",
    ],
    "unicorn/no-nested-ternary": [
      "off",
    ],
    "unicorn/number-literal-case": [
      "off",
    ],
    "vue/array-bracket-newline": [
      "off",
    ],
    "vue/array-bracket-spacing": [
      "off",
    ],
    "vue/arrow-spacing": [
      "off",
    ],
    "vue/block-spacing": [
      "off",
    ],
    "vue/block-tag-newline": [
      "off",
    ],
    "vue/brace-style": [
      "off",
    ],
    "vue/comma-dangle": [
      "off",
    ],
    "vue/comma-spacing": [
      "off",
    ],
    "vue/comma-style": [
      "off",
    ],
    "vue/dot-location": [
      "off",
    ],
    "vue/func-call-spacing": [
      "off",
    ],
    "vue/html-closing-bracket-newline": [
      "off",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "off",
    ],
    "vue/html-indent": [
      "off",
    ],
    "vue/html-quotes": [
      "off",
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      "off",
    ],
    "vue/keyword-spacing": [
      "off",
    ],
    "vue/max-attributes-per-line": [
      "off",
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      "off",
    ],
    "vue/mustache-interpolation-spacing": [
      "off",
    ],
    "vue/no-extra-parens": [
      "off",
    ],
    "vue/no-multi-spaces": [
      "off",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "off",
    ],
    "vue/object-curly-newline": [
      "off",
    ],
    "vue/object-curly-spacing": [
      "off",
    ],
    "vue/object-property-newline": [
      "off",
    ],
    "vue/operator-linebreak": [
      "off",
    ],
    "vue/quote-props": [
      "off",
    ],
    "vue/script-indent": [
      "off",
    ],
    "vue/singleline-html-element-content-newline": [
      "off",
    ],
    "vue/space-in-parens": [
      "off",
    ],
    "vue/space-infix-ops": [
      "off",
    ],
    "vue/space-unary-ops": [
      "off",
    ],
    "vue/template-curly-spacing": [
      "off",
    ],
    "wrap-iife": [
      "off",
    ],
    "wrap-regex": [
      "off",
    ],
    "yield-star-spacing": [
      "off",
    ],
  },
  "settings": {},
}
`;

exports[`should load react configuration 1`] = `
{
  "env": {
    "browser": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
  },
  "plugins": [
    "react",
    "jsx-a11y",
    "react-hooks",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "jsx-a11y/alt-text": [
      "error",
    ],
    "jsx-a11y/anchor-has-content": [
      "error",
    ],
    "jsx-a11y/anchor-is-valid": [
      "error",
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": [
      "error",
    ],
    "jsx-a11y/aria-props": [
      "error",
    ],
    "jsx-a11y/aria-proptypes": [
      "error",
    ],
    "jsx-a11y/aria-role": [
      "error",
    ],
    "jsx-a11y/aria-unsupported-elements": [
      "error",
    ],
    "jsx-a11y/autocomplete-valid": [
      "error",
    ],
    "jsx-a11y/click-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/control-has-associated-label": [
      "off",
      {
        "ignoreElements": [
          "audio",
          "canvas",
          "embed",
          "input",
          "textarea",
          "tr",
          "video",
        ],
        "ignoreRoles": [
          "grid",
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "row",
          "tablist",
          "toolbar",
          "tree",
          "treegrid",
        ],
        "includeRoles": [
          "alert",
          "dialog",
        ],
      },
    ],
    "jsx-a11y/heading-has-content": [
      "error",
    ],
    "jsx-a11y/html-has-lang": [
      "error",
    ],
    "jsx-a11y/iframe-has-title": [
      "error",
    ],
    "jsx-a11y/img-redundant-alt": [
      "error",
    ],
    "jsx-a11y/interactive-supports-focus": [
      "error",
      {
        "tabbable": [
          "button",
          "checkbox",
          "link",
          "searchbox",
          "spinbutton",
          "switch",
          "textbox",
        ],
      },
    ],
    "jsx-a11y/label-has-associated-control": [
      "error",
    ],
    "jsx-a11y/label-has-for": [
      "off",
    ],
    "jsx-a11y/media-has-caption": [
      "error",
    ],
    "jsx-a11y/mouse-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/no-access-key": [
      "error",
    ],
    "jsx-a11y/no-autofocus": [
      "error",
    ],
    "jsx-a11y/no-distracting-elements": [
      "error",
    ],
    "jsx-a11y/no-interactive-element-to-noninteractive-role": [
      "error",
      {
        "canvas": [
          "img",
        ],
        "tr": [
          "none",
          "presentation",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-interactions": [
      "error",
      {
        "alert": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "body": [
          "onError",
          "onLoad",
        ],
        "dialog": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "handlers": [
          "onClick",
          "onError",
          "onLoad",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
        "iframe": [
          "onError",
          "onLoad",
        ],
        "img": [
          "onError",
          "onLoad",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-to-interactive-role": [
      "error",
      {
        "fieldset": [
          "radiogroup",
          "presentation",
        ],
        "li": [
          "menuitem",
          "option",
          "row",
          "tab",
          "treeitem",
        ],
        "ol": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
        "table": [
          "grid",
        ],
        "td": [
          "gridcell",
        ],
        "ul": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-tabindex": [
      "error",
      {
        "allowExpressionValues": true,
        "roles": [
          "tabpanel",
        ],
        "tags": [],
      },
    ],
    "jsx-a11y/no-redundant-roles": [
      "error",
    ],
    "jsx-a11y/no-static-element-interactions": [
      "error",
      {
        "allowExpressionValues": true,
        "handlers": [
          "onClick",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
      },
    ],
    "jsx-a11y/role-has-required-aria-props": [
      "error",
    ],
    "jsx-a11y/role-supports-aria-props": [
      "error",
    ],
    "jsx-a11y/scope": [
      "error",
    ],
    "jsx-a11y/tabindex-no-positive": [
      "error",
    ],
    "react-hooks/exhaustive-deps": [
      "warn",
    ],
    "react-hooks/rules-of-hooks": [
      "error",
    ],
    "react/display-name": [
      2,
    ],
    "react/jsx-key": [
      2,
    ],
    "react/jsx-no-comment-textnodes": [
      2,
    ],
    "react/jsx-no-duplicate-props": [
      2,
    ],
    "react/jsx-no-target-blank": [
      2,
    ],
    "react/jsx-no-undef": [
      2,
    ],
    "react/jsx-uses-react": [
      2,
    ],
    "react/jsx-uses-vars": [
      2,
    ],
    "react/no-children-prop": [
      2,
    ],
    "react/no-danger-with-children": [
      2,
    ],
    "react/no-deprecated": [
      2,
    ],
    "react/no-direct-mutation-state": [
      2,
    ],
    "react/no-find-dom-node": [
      2,
    ],
    "react/no-is-mounted": [
      2,
    ],
    "react/no-render-return-value": [
      2,
    ],
    "react/no-string-refs": [
      2,
    ],
    "react/no-unescaped-entities": [
      2,
    ],
    "react/no-unknown-property": [
      2,
    ],
    "react/no-unsafe": [
      0,
    ],
    "react/prop-types": [
      2,
    ],
    "react/react-in-jsx-scope": [
      2,
    ],
    "react/require-render-return": [
      2,
    ],
  },
  "settings": {
    "import/resolver": {
      "node": {
        "extensions": [
          ".js",
          ".jsx",
        ],
      },
    },
    "react": {
      "version": "detect",
    },
  },
}
`;

exports[`should load typescript configuration 1`] = `
{
  "env": {
    "es2022": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": "<node_modules>/@typescript-eslint/parser/dist/index.js",
  "parserOptions": {
    "ecmaVersion": 2022,
    "sourceType": "module",
  },
  "plugins": [
    "import",
    "eslint-comments",
    "@typescript-eslint",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "error",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-empty-function": [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "warn",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-semi": [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": [
      "error",
      {
        "ignoreRestSiblings": true,
      },
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "constructor-super": [
      "error",
    ],
    "eslint-comments/disable-enable-pair": [
      "error",
    ],
    "eslint-comments/no-aggregating-enable": [
      "error",
    ],
    "eslint-comments/no-duplicate-disable": [
      "error",
    ],
    "eslint-comments/no-unlimited-disable": [
      "error",
    ],
    "eslint-comments/no-unused-enable": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/named": [
      "off",
    ],
    "import/namespace": [
      "error",
    ],
    "import/no-duplicates": [
      "warn",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "alphabetize": {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": [
          "builtin",
          "external",
          "internal",
          [
            "parent",
            "index",
            "sibling",
          ],
          "object",
          "type",
          "unknown",
        ],
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "internal",
            "pattern": "@/**",
          },
          {
            "group": "internal",
            "pattern": "~/**",
          },
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
      {
        "ignoreRestSiblings": true,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
  },
  "settings": {
    "import/extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "import/external-module-folders": [
      "node_modules",
      "node_modules/@types",
    ],
    "import/parsers": {
      "@typescript-eslint/parser": [
        ".ts",
        ".tsx",
      ],
    },
    "import/resolver": {
      "node": {
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
        ],
      },
      "typescript": {},
    },
  },
}
`;
